<resources>
    <string name="app_name">Soothsayer</string>
    <string name="question_str">Which came first?</string>
    <string name="dragon">Dragon</string>
    <string name="egg">Egg</string>
    <string name="score">Score:</string>
    <string name="guess">Guess</string>
    <string name="flag">Get Flag</string>
    <string name="round">Rounds left:</string>
    <string name="round_value">30</string>
    <string name="reset">Reset</string>
</resources>